# koko-matrix-rain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/: cli.rs  main.rs  pipes.rs  rain.rs
src/snapshots/: koko_matrix_rain__rain__tests__snapshot_frame_100_20x8_no_shade.snap  koko_matrix_rain__rain__tests__snapshot_frame_50_20x8_wide_chars.snap  koko_matrix_rain__rain__tests__snapshot_frame_50_30x10.snap  koko_rain__rain__tests__snapshot_frame_100_20x8_no_shade.snap  rain__rain__tests__snapshot_frame_100_20x8_no_shade.snap  rain__rain__tests__snapshot_frame_50_30x10.snap
