[package]
name = "rain"
version = "0.1.0"
edition = "2021"
description = "Minimal Matrix-style rain for the terminal (macOS)"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
rand = "0.8"

[dev-dependencies]
insta = "1.39"

[profile.release]
lto = true
codegen-units = 1
strip = true
