[package]
name = "koko-matrix-rain"
version = "0.0.3"
edition = "2021"
description = "Minimal Matrix-style rain CLI for the terminal"
license = "MIT"
repository = "https://github.com/diegorv/koko-matrix-rain"
homepage = "https://github.com/diegorv/koko-matrix-rain"
keywords = ["terminal", "matrix", "rain", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
rand = "0.10"
unicode-width = "0.2"

[dev-dependencies]
insta = "1.39"

[profile.release]
lto = true
codegen-units = 1
strip = true
